--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -100,3 +100,16 @@ body {
 #start-game:disabled {
     cursor: auto;
 }
+
+#crosshair {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.hidden {
+    opacity: 0;
+}
