--- a/src/client/assets/css/style.css
+++ b/src/client/assets/css/style.css
@@ -1,105 +1,33 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0!important;
+    padding: 0!important;
 }
 
 body {
-    max-height: 100vh;
+    width: 100vw;
+    height: 100vh;
 }
 
-#info {
-    position: absolute;
-    mix-blend-mode: difference;
-    color: yellow;
-    font-size: 24px;
+/************* LANDING PAGE ************/
+
+#landing-page {
+    width: 100%;
+    height: 100%;
 }
 
-#main-menu {
-    display: flex;
+.lp-zombie-hand-div {
+    height: 100%;
 }
-#main-menu:nth-child(1n+0) {
-
-}
-
-.col {
-    width: 50vw;
+.lp-zombie-hand {
+    height: 100%;
 }
 
-.container {
 
-}
-
-.row {
-    display: flex;
-    align-content: center;
+/************* GAME ************/
+#game-UI {
+    display: none;
 }
 
-#main-title {
-    color: #C20707;
-    font-size: 185px;
-    font-family: Impact;
-    text-align: center;
-}
-
-.zombie-hand {
-
-}
-
-#start-game {
-   appearance: button;
-   background-color: #850505;
-   border: solid transparent;
-   border-radius: 16px;
-   border-width: 0 0 4px;
-   box-sizing: border-box;
-   color: #FFFFFF;
-   cursor: pointer;
-   display: inline-block;
-   font-family: din-round,sans-serif;
-   font-size: 15px;
-   font-weight: 700;
-   letter-spacing: .8px;
-   line-height: 20px;
-   margin: 0;
-   outline: none;
-   overflow: visible;
-   padding: 13px 16px;
-   text-align: center;
-   text-transform: uppercase;
-   touch-action: manipulation;
-   transform: translateZ(0);
-   transition: filter .2s;
-   user-select: none;
-   -webkit-user-select: none;
-   vertical-align: middle;
-   white-space: nowrap;
-   width: 100%;
-}
-#start-game:after {
-    background-clip: padding-box;
-    background-color: #C20707;
-    border: solid transparent;
-    border-radius: 16px;
-    border-width: 0 0 4px;
-    bottom: -4px;
-    content: "";
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: -1;
-}
-#start-game:main,
-#start-game:focus {
-    user-select: auto;
-}
-#start-game:hover:not(:disabled) {
-    filter: brightness(1.1);
-    -webkit-filter: brightness(1.1);
-}
-#start-game:disabled {
-    cursor: auto;
-}
 
 #crosshair {
     position: absolute;
