--- a/src/client/assets/css/style.css
+++ b/src/client/assets/css/style.css
@@ -2,37 +2,16 @@
     margin: 0!important;
     padding: 0!important;
 }
-
-body {
-    width: 100vw;
-    height: 100vh;
-}
-
-/************* LANDING PAGE ************/
-
-#landing-page {
-    width: 100%;
-    height: 100%;
-}
-
-.lp-zombie-hand-div {
-    height: 100%;
-}
-.lp-zombie-hand {
-    height: 100%;
-}
-
-
 /************* GAME ************/
-#game-UI {
-    display: none;
-}
 
+#info {
+    position: absolute;
+}
 
 #crosshair {
     position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -42,22 +21,16 @@ body {
     height: 100px;
 }
 
+.d-none {
+    display: none;
+}
 .hidden {
     opacity: 0;
-}
-
-.displaynone {
-    display: none!important;
 }
 
 #chat-div {
     position: absolute;
     bottom: 0;
-    max-height: 50vh;
-    max-width: 30vw;
-    width: 30vw;
-    overflow-y: scroll;
-    word-wrap: anywhere;
 }
 #chat-input {
     -webkit-appearance: none;
