--- a/src/client/assets/css/style.css
+++ b/src/client/assets/css/style.css
@@ -74,6 +74,7 @@
     position: absolute;
 }
 #option-menu > button,a {
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -85,6 +86,22 @@
 
     color: darkorange;
     font-size: 24px;
+    text-decoration: none;
+    font-family: Impact;
+    font-weight: lighter;
+
+    transition: 0.2s;
+}
+#option-menu > a:hover {
+    background: #4d1d00;
+}
+#option-menu > button:hover {
+    background: #4d1d00;
+}
+
+label {
+    color: white;
+    font-size: 25px;
 }
 
 
