[FEATURE] players points

--- a/src/client/assets/css/style.css
+++ b/src/client/assets/css/style.css
@@ -86,6 +86,12 @@
     top: 0;
 }
 
+#points {
+    position: absolute;
+    top: 40vh;
+    right: 10px;
+}
+
 .keyboard-enter {
     height: 25px;
     top: 5px;
