--- a/src/client/assets/css/style.css
+++ b/src/client/assets/css/style.css
@@ -24,6 +24,8 @@
     justify-content: center;
     align-items: center;
 
+    background-color: #7C0404;
+
     width: 100vw;
     height: 100vh;
 
@@ -95,15 +97,15 @@
     border: none;
     width: 300px;
 }
-
 #chat-ul > li{
     margin-top: 2px;
     font-family: Arial;
 }
-
 #chat-ul > li > span{
     margin-top: 2px;
-    font-family: z3d;
+    /*font-family: z3d;*/
+    font-family: Arial;
+    font-weight: bold;
 }
 
 #points {
@@ -144,6 +146,9 @@
 }
 #option-menu > button:hover {
     background: #4d1d00;
+}
+#option-menu > button:disabled {
+    background: #392c22;
 }
 
 label {
