--- a/src/client/assets/css/style.css
+++ b/src/client/assets/css/style.css
@@ -99,8 +99,7 @@ body {
 
 #chat-div {
     position: absolute;
-    bottom: 0;
-    background-color: rgba(255, 255, 255, .5);
+    bottom: 50%;
     border-radius: 10px;
     padding: 5px;
     max-width: 300px;
