[WIP] lobby and game builder

--- a/src/server/vue/game.ejs
+++ b/src/server/vue/game.ejs
@@ -4,7 +4,10 @@
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <meta charset="UTF-8">
     <title>Z3D</title>
-    <link rel="stylesheet" type="text/css" href="../fonts/HelpMe.ttf" >
+    <link rel="stylesheet" type="text/css" href="../fonts/HelpMe.ttf">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
 </head>
 <body>
 
@@ -12,29 +15,98 @@
     <img src="../img/loader2.gif">
 </div>
 
-<div id="lobby">
-    <div id="lobby-left" class="col">
-        <div id="lobby-room-name"><%= game.name %></div>
-        <div id="lobby-room-id"><%= game.roomId %></div>
+<div id="lobby" class="fluid-container d-flex">
 
-        <div id="lobby-form">
-            <form>
-                <!-- map slider -->
+    <div id="lobby-left" class="col d-flex flex-column justify-content-between">
 
-                <!-- modifier -->
+        <div>
+            <div id="lobby-room-name" class="row">
+                <h2 class="red"><%= game.name %></h2>
+            </div>
+            <div id="lobby-room-id" class="row">
+                <h3 class="dark-red"><%= game.roomId %></h3>
+            </div>
+        </div>
+
+        <div id="lobby-form" class="container">
+
+            <div class="row">
+
+                <div class="col-1"></div>
+                <div class="col">
+
+                    <form>
+                        <!-- map slider -->
+                        <div id="carouselExample" class="carousel slide">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="../img/map-preview/flora_square.jpg" class="d-block carousel-img" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="../img/map-preview/flora_square.jpg" class="d-block carousel-img" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="../img/map-preview/flora_square.jpg" class="d-block carousel-img" alt="...">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+
+                        <!-- modifier -->
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleInputPassword1" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="exampleInputPassword1">
+                        </div>
+                        <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        </div>
+                        <div class="d-flex justify-content-center mb-5">
+
+                            <% if(game.owner === user.id){ %>
+                                <button id="lobby-start_game" data-url="/game/start/<%= game.roomId %>" type="submit" class="btn btn-red">Start</button>
+                            <% } else{ %>
+                                <button id="lobby-ready" data-url="/game/start/<%= game.roomId %>" type="submit" class="btn btn-red">Ready</button>
+                            <% } %>
 
 
-                <button id="lobby-start-game" data-url="/game/start/<%= game.roomId %>">Start</button>
-            </form>
+                        </div>
+                    </form>
+
+                </div>
+                <div class="col-1"></div>
+
+            </div>
         </div>
     </div>
 
     <div id="lobby-right" class="col">
-        <div>Z3D</div>
-        <div id="lobby-map">Map name</div>
-        <div id="lobby-map-name"><img src="" alt="map"/></div>
+        <div id="lobby-right-header-parent">
+            <h1 id="lobby-z3d" class="red">Z3D</h1>
+            <div id="lobby-map-name" class="dark-red">Flora Square</div>
+        </div>
         <div id="lobby-players">
-            <ul id="lobby-players-list"></ul>
+            <ul id="lobby-players-list">
+                <li class="color-white">Esteban</li>
+                <li class="color-blue">OIM</li>
+                <li class="color-red">Swag</li>
+                <li class="color-green">Oui</li>
+            </ul>
+        </div>
+        <div id="lobby-map-img-div">
+            <img id="lobby-map-img" src="../img/map-preview/flora_square.jpg">
         </div>
     </div>
 </div>
@@ -127,6 +199,10 @@
     </div>
 
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
