--- a/src/client/assets/css/style.css
+++ b/src/client/assets/css/style.css
@@ -9,12 +9,111 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: z3d;
 }
 
 body {
     overflow: hidden;
 }
+
+/************* LOBBY ************/
+
+#lobby {
+    width: 100vw;
+    height: 100vh;
+
+    background-color: #333333;
+    color: #ccc;
+}
+
+.btn-red {
+    color: #cccccc;
+    background-color: #C20707;
+}
+
+.red {
+    color: #C20707;
+}
+
+.dark-red {
+    color: #880000;
+}
+
+#lobby-map-img-div img {
+    width: 100%;
+    height: 100%;
+
+    filter: sepia(.5);
+}
+
+#lobby-right-header-parent {
+    z-index: 50;
+    position: absolute;
+
+    top: 0;
+    right: 0;
+}
+#lobby-z3d {
+    font-family: z3d;
+
+    position: relative;
+    right: 50px;
+    top: 20px;
+
+    text-align: end;
+
+    font-size: 128px;
+}
+#lobby-map-name {
+    position: relative;
+    right: 50px;
+    top: 20px;
+
+    text-align: end;
+
+    font-size: 64px;
+}
+
+#lobby-players {
+    z-index: 50;
+    position: absolute;
+
+    bottom: 0;
+    right: 0;
+
+    font-size: 64px;
+
+    list-style: none;
+}
+
+#lobby-players-list  {
+    list-style: none;
+    position: relative;
+
+    right: 50px;
+    text-align: end;
+}
+
+.carousel-img {
+    max-height: 400px;
+    max-width: 400px;
+}
+
+
+.color-white {
+    color: white;
+}
+.color-blue {
+    color: darkblue;
+}
+.color-red {
+    color: #880000;
+}
+.color-green {
+    color: darkgreen;
+}
+
+
+
 
 /************* GAME ************/
 
