--- a/src/client/assets/css/style.css
+++ b/src/client/assets/css/style.css
@@ -38,11 +38,26 @@ body {
     color: #880000;
 }
 
-#lobby-map-img-div img {
+#lobby-map-img-div {
+}
+
+#lobby-map-img {
     width: 100%;
     height: 100%;
 
     filter: sepia(.5);
+
+}
+
+#lobby-map-img-div::after {
+    box-shadow: inset 20px 0 100px 0 #333, inset 0 0 90px 10vh #333;
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 50vw;
 }
 
 #lobby-right-header-parent {
@@ -97,6 +112,12 @@ body {
     max-height: 400px;
     max-width: 400px;
 }
+
+
+.lobby-player {
+    font-weight: bolder;
+}
+
 
 
 .color-white {
