[TASK] Updated game lobby UI

--- a/src/server/vue/game.ejs
+++ b/src/server/vue/game.ejs
@@ -20,11 +20,11 @@
     <div id="lobby-left" class="col d-flex flex-column justify-content-between">
 
         <div>
-            <div id="lobby-room-name" class="row">
-                <h2 class="red"><%= game.name %></h2>
+            <div id="lobby-room-name-div" class="row">
+                <h2 id="lobby-room-name" class="red"><%= game.name %></h2>
             </div>
-            <div id="lobby-room-id" class="row">
-                <h3 class="dark-red"><%= game.roomId %></h3>
+            <div id="lobby-room-id-div" class="row">
+                <h3 id="lobby-room-id" class="dark-red"><%= game.roomId %></h3>
             </div>
         </div>
 
