[FEATURE] running + img for weapons

--- a/src/server/vue/game.ejs
+++ b/src/server/vue/game.ejs
@@ -124,7 +124,7 @@
     </div>
 
     <div id="current-weapon-fpsview">
-        <img src="../img/weapons/pistol/fpsview.png">
+        <img id="current-weapon-fpsview-img" src="../img/weapons/pistol/fpsview.png">
     </div>
 
     <div id="knife">
