--- a/src/server/views/game.ejs
+++ b/src/server/views/game.ejs
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+<input id="userId" type="hidden" value="<%= user._id %>">
 
 <div id="loader-gif">
     <img src="../img/loader2.gif">
@@ -60,22 +61,8 @@
                         </div>
 
                         <!-- modifier -->
-                        <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
-                        </div>
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                        </div>
                         <div class="d-flex justify-content-center mb-5">
-
-                            <% if(game.owner === user.id || !game.isOnlineMode){ %>
+                            <% if(game.owner === user._id || !game.isOnlineMode){ %>
                                 <button id="lobby-start_game" data-url="/game/start/<%= game.roomId %>" type="submit" class="btn btn-red">Start</button>
                             <% } else{ %>
                                 <button id="lobby-player-ready" data-url="/game/start/<%= game.roomId %>" type="submit" class="btn btn-red">Ready</button>
