--- a/src/server/views/register.ejs
+++ b/src/server/views/register.ejs
@@ -48,6 +48,7 @@
     }
 
     .button {
+        margin-top: 10px;
       transition-duration: 0.4s;
     }
 
@@ -62,9 +63,24 @@
 
     <div class="login">
 
-        <h2 id="z3d">Z3D</h2>
+        <h1 id="z3d">Z3D</h1>
+        <h2 >Register</h2>
 
-        <a href="/auth/google" class="button"><span class="fa fa-google"></span>Connect with Google</a>
+        <form class="mt-5" action="/register" method="post">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control" placeholder="Enter email" name="username">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Username</label>
+                <input type="text" class="form-control" placeholder="Enter username" name="name">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" placeholder="Password" name="password">
+            </div>
+            <button type="submit" class="btn button">Log in</button>
+        </form>
 
     </div>
 
