--- a/src/server/vue/game.ejs
+++ b/src/server/vue/game.ejs
@@ -39,13 +39,13 @@
                         <!-- map slider -->
                         <div id="lobby-map-carousel" class="carousel slide">
                             <div class="carousel-inner">
-                                <div class="carousel-item active">
+                                <div class="carousel-item active" data-map-name="Flora Square">
                                     <img src="../img/map-preview/flora_square.jpg" class="d-block carousel-img" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-map-name="Jambon de porc">
                                     <img src="../img/map-preview/flora_square.jpg" class="d-block carousel-img" alt="...">
                                 </div>
-                                <div class="carousel-item">
+                                <div class="carousel-item" data-map-name="RaspberryPi">
                                     <img src="../img/map-preview/flora_square.jpg" class="d-block carousel-img" alt="...">
                                 </div>
                             </div>
@@ -109,14 +109,14 @@
             <!-- map slider -->
             <div id="lobby-main-map-carousel" class="carousel slide">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../img/map-preview/flora_square.jpg" class="d-block carousel-main-img" alt="...">
+                    <div class="carousel-item active" >
+                        <img src="../img/map-preview/flora_square.jpg" class="d-block carousel-main-img"  alt="...">
                     </div>
-                    <div class="carousel-item">
-                        <img src="../img/map-preview/flora_square.jpg" class="d-block carousel-main-img" alt="...">
+                    <div class="carousel-item" >
+                        <img src="../img/map-preview/flora_square.jpg" class="d-block carousel-main-img"  alt="...">
                     </div>
-                    <div class="carousel-item">
-                        <img src="../img/map-preview/flora_square.jpg" class="d-block carousel-main-img" alt="...">
+                    <div class="carousel-item" >
+                        <img src="../img/map-preview/flora_square.jpg" class="d-block carousel-main-img"  alt="...">
                     </div>
                 </div>
             </div>
