--- a/src/server/views/register.ejs
+++ b/src/server/views/register.ejs
@@ -73,7 +73,7 @@
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail1">Username</label>
-                <input type="text" class="form-control" placeholder="Enter username" name="name">
+                <input type="text" class="form-control" placeholder="Enter username" name="gamename">
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
